--- a/Tribute_page.html
+++ b/Tribute_page.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div><img src="/Images/C_V_RAMAN.jpg" height="200" width="200" alt="C.V.Raman" ></div>
+    <div><img src="Images/C_V_RAMAN.jpg" height="200" width="200" alt="C.V.Raman" ></div>
     <div class="first"><h2>Chandrasekhara Venkata Raman</h2>
     <h4>1888-1970</h4></div>
     <p> <strong> Sir Chandrasekhara Venkata Raman</strong> FRS 7 November 1888 – 21 November 1970) was an Indian physicist known for his work in the field of light scattering.[2] Using a spectrograph that he developed, he and his student K. S. Krishnan discovered that when light traverses a transparent material, the deflected light changes its wavelength and frequency. This phenomenon, a hitherto unknown type of scattering of light, which they called "modified scattering" was subsequently termed the Raman effect or Raman scattering.</p>
@@ -70,7 +70,7 @@
 
     </table>
         <p>He made many significant contributions to physics, and the institutions he founded and helped establish have been integral in putting India on the map in physics. <b> National Science Day </b> is celebrated on 28 February each year in India to mark the discovery of Raman scattering.</p>
-<div class="div"><a href="/National_Science_Day.html">...National Science Day</a> <br>
+<div class="div"><a href="National_Science_Day.html">...National Science Day</a> <br>
 <a href="https://en.wikipedia.org/wiki/C._V._Raman">...Wikipedia</a><br>
 <a href="https://www.britannica.com/biography/C-V-Raman">...Biography</a></div>
 
