--- a/Tribute_page.html
+++ b/Tribute_page.html
@@ -11,7 +11,7 @@
         h2{text-align:center;color: brown;text-shadow: 6px 5px 7px black ;}
         h3{color: darkgoldenrod;}
         h4{text-align:center;color:brown;}
-        body{border-style: groove;border-width: 3px;border-color:blue;   background-image: url(/Images/BACKGROUND.jpg); padding: 20px;
+        body{border-style: groove;border-width: 3px;border-color:blue;   background-image: url(Images/BACKGROUND.jpg); padding: 20px;
         background-repeat: no-repeat;background-size: 1200px 1500px;}
         div{text-align: center;}
         strong{text-transform:uppercase;color: blueviolet;}
