--- a/Tribute_page.html
+++ b/Tribute_page.html
@@ -22,14 +22,14 @@
         a:active{color: green;}
         a:visited{color:rgb(179, 9, 122)}
         b{text-transform: uppercase;}
-        .first{line-height: 0.9px;}
+        .first{line-height: 1px;}
     
         
     </style>
 </head>
 <body>
     <div><img src="Images/C_V_RAMAN.jpg" height="200" width="200" alt="C.V.Raman" ></div>
-    <div class="first"><h2>Chandrasekhara Venkata Raman</h2>
+    <div class="first"><h2>C. V. Raman</h2>
     <h4>1888-1970</h4></div>
     <p> <strong> Sir Chandrasekhara Venkata Raman</strong> FRS 7 November 1888 – 21 November 1970) was an Indian physicist known for his work in the field of light scattering.[2] Using a spectrograph that he developed, he and his student K. S. Krishnan discovered that when light traverses a transparent material, the deflected light changes its wavelength and frequency. This phenomenon, a hitherto unknown type of scattering of light, which they called "modified scattering" was subsequently termed the Raman effect or Raman scattering.</p>
 
